# verified-th-news

./: .env.example  .gitignore  HANDOFF.md  README.md  pyproject.toml
docs/: risk-triage-design.md
scratch/: extract_all_originals.py  extract_cofact_originals.py  extract_spreader_names.py  test_deep_trans.py  test_transcript.py  test_translate.py
scripts/: backfill_provenance.py  build_brief.py  build_dataset.py  daily_sync.sh  eval_retrieval.py  llm_assist.py
src/th_verify/: __init__.py  api.py  classifier.py  cli.py  clustering.py  config.py  db.py  models.py  search.py  service.py
src/th_verify/collectors/: __init__.py  afnc.py  afp.py  base.py  cofact.py  sure_share.py  thaipbs.py
src/th_verify/static/: index.html  review.html
tests/: test_collectors.py  test_db.py  test_invariants.py
