[project]
name = "th-verify-db"
version = "0.1.0"
description = "Unified Thai fact-check archive and live-delta ingestion service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "selectolax>=0.3.21,<1",
  "typer>=0.12,<1",
  "uvicorn>=0.30,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "pytest-asyncio>=0.23,<1"]
search = ["sentence-transformers>=3,<6", "numpy>=1.26"]

[project.scripts]
th-verify = "th_verify.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/th_verify"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
